test/classes/initializers/generics/explicitAssignment.good
explicitAssignment.chpl:17: In function 'main':
explicitAssignment.chpl:18: error: type mismatch in assignment from Foo(int(64)) to Foo(real(64))
